--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ edition = "2018"
 [build-dependencies]
 pkg-config = "0.3"
 cmake = "0.1"
+
+[features]
+default = ["static", "dynamic"]
+static = []
+dynamic = []
